0025351: Visualization - provide pseudo random number generator in OCCT ray-tracing core